// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusText /> can pass props to underlying \`Text\` 1`] = `
<h4
  className="text_i23n2q-o_O-text_large_1b2mxt3"
>
  <span
    className="text_muted_10k87om"
  >
    Text
  </span>
</h4>
`;

exports[`<StatusText /> statuses renders text 1`] = `
<div
  className="text_i23n2q"
>
  <span
    className="text_notice_16fnaxc"
  >
    notice
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 2`] = `
<div
  className="text_i23n2q"
>
  <span
    className="text_info_1qlg6bk"
  >
    info
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 3`] = `
<div
  className="text_i23n2q"
>
  <span
    className="text_success_xr5ae0"
  >
    success
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 4`] = `
<div
  className="text_i23n2q"
>
  <span
    className="text_warning_1b6zul9"
  >
    warning
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 5`] = `
<div
  className="text_i23n2q"
>
  <span
    className="text_danger_1ardfxt"
  >
    danger
  </span>
</div>
`;

exports[`<StatusText /> statuses renders text 6`] = `
<div
  className="text_i23n2q"
>
  <span
    className="text_muted_10k87om"
  >
    muted
  </span>
</div>
`;
